--- a/package.json
+++ b/package.json
@@ -1,12 +1,26 @@
 {
-  "name": "masakmudah-backend",
-  "scripts": {
-    "dev": "bun run --hot src/index.ts"
-  },
-  "dependencies": {
-    "hono": "^4.5.3"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
-  }
+	"name": "masakmudah-backend",
+	"scripts": {
+		"dev": "bun run --hot src/index.ts",
+		"start": "bun run src/index.ts",
+		"db:migrate:dev": "prisma migrate dev",
+		"db:migrate:deploy": "prisma migrate deploy",
+		"db:generate": "prisma generate",
+		"seed": "prisma db seed",
+		"db:studio": "prisma studio"
+	},
+	"prisma": {
+		"seed": "tsx prisma/seed.ts"
+	},
+	"dependencies": {
+		"hono": "^4.5.3",
+		"@hono/zod-validator": "^0.2.2",
+		"prisma": "^5.18.0",
+		"oslo": "^1.2.0",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@types/bun": "latest",
+		"tsx": "^4.15.7"
+	}
 }
