--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-  "scripts": {
-    "dev": "bun run --hot src/index.ts"
-  },
-  "dependencies": {
-    "hono": "^4.5.3"
-  },
-  "devDependencies": {
-    "@types/bun": "latest"
-  }
+	"scripts": {
+		"dev": "bun run --hot src/index.ts",
+		"start": "bun run src/index.ts"
+	},
+	"prisma": {
+		"seed": "tsx prisma/seed.ts"
+	},
+	"dependencies": {
+		"hono": "^4.5.3",
+		"prisma": "^5.18.0",
+		"@hono/zod-validator": "^0.2.2",
+		"@prisma/client": "5.16.2",
+		"oslo": "^1.2.0",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@types/bun": "latest"
+	}
 }
