--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
