--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hono": "^4.5.3",
     "oslo": "^1.2.0",
     "prisma": "^5.18.0",
+    "slugify": "^1.6.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
