--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DATABASE
+
+
+POSTGRES_USER=USER
+POSTGRES_PASSWORD=PASSWORD
+POSTGRES_DB=DATABASE
