--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.18.0",
     "hono": "^4.5.3",
+    "nanoid": "^5.0.7",
     "oslo": "^1.2.0",
     "prisma": "^5.18.0",
     "slugify": "^1.6.6",
